Update productImage